@@ -29,5 +29,6 @@ setup(name='bl_vl_genotype',
                 #-
                 'bl.vl.app',
                 'bl.vl.app.importer',
+                'bl.vl.app.exporter',
                 ],
       )
